@@ -1159,6 +1159,11 @@ void Client::ChannelMessageSend(const char* from, const char* to, uint8 chan_num
 	if (EffSkill > 100)	// maximum language skill is 100
 		EffSkill = 100;
 	cm->skill_in_language = EffSkill;
+
+	// Garble the message based on listener skill
+	if (ListenerSkill < 100) {
+		GarbleMessage(buffer, (100 - ListenerSkill));
+	}
 	
 	cm->chan_num = chan_num;
 	strcpy(&cm->message[0], buffer);
@@ -7258,4 +7263,17 @@ void Client::DuplicateLoreMessage(uint32 ItemID)
 		return;
 
 	Message_StringID(0, PICK_LORE, item->Name);
+}
+
+void Client::GarbleMessage(char *message, uint8 variance)
+{
+	const char alpha_list[] = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"; // only change alpha characters for now
+
+	for (size_t i = 0; i < strlen(message); i++) {
+		uint8 chance = (uint8)MakeRandomInt(0, 115); // variation just over worst possible scrambling
+		if (isalpha(message[i]) && (chance <= variance)) {
+			uint8 rand_char = (uint8)MakeRandomInt(0,51); // choose a random character from the alpha list
+			message[i] = alpha_list[rand_char];
+		}
+	}
 }
